Some spacing fixes

--- a/uiframework/misago/css/misago/header.less
+++ b/uiframework/misago/css/misago/header.less
@@ -90,6 +90,7 @@
     .page-details {
       display: block;
       clear: both;
+      margin-bottom: 0;
 
       color: @text-muted;
 
