--- a/uiframework/misago/css/style.css
+++ b/uiframework/misago/css/style.css
@@ -5913,6 +5913,7 @@ button.close {
   background: #c7c7c7;
   border-color: #c7c7c7;
   box-shadow: none;
+  outline: none;
   position: relative;
   top: 2px;
   color: #5e5e5e;
@@ -5940,6 +5941,7 @@ button.close {
   background: #1d6fa5;
   border-color: #1d6fa5;
   box-shadow: none;
+  outline: none;
   position: relative;
   top: 2px;
   color: #e6e6e6;
@@ -5967,6 +5969,7 @@ button.close {
   background: #28a1c5;
   border-color: #28a1c5;
   box-shadow: none;
+  outline: none;
   position: relative;
   top: 2px;
   color: #e6e6e6;
@@ -5994,6 +5997,7 @@ button.close {
   background: #208e4e;
   border-color: #208e4e;
   box-shadow: none;
+  outline: none;
   position: relative;
   top: 2px;
   color: #e6e6e6;
@@ -6021,6 +6025,7 @@ button.close {
   background: #df8a13;
   border-color: #df8a13;
   box-shadow: none;
+  outline: none;
   position: relative;
   top: 2px;
   color: #e6e6e6;
@@ -6048,6 +6053,7 @@ button.close {
   background: #bf2718;
   border-color: #bf2718;
   box-shadow: none;
+  outline: none;
   position: relative;
   top: 2px;
   color: #e6e6e6;
@@ -6212,7 +6218,7 @@ button.close {
 .nav-pills > li > a:link,
 .nav-pills > li > a:active,
 .nav-pills > li > a:visited {
-  padding: 8px 10px;
+  padding: 6px 7px;
   color: #999999;
 }
 .nav-pills > li > a:hover {
@@ -6438,6 +6444,7 @@ button.close {
   background: #d4d4d4;
   border-color: #d4d4d4;
   box-shadow: none;
+  outline: none;
   position: relative;
   top: 2px;
   color: #616161;
@@ -6466,6 +6473,7 @@ button.close {
   background: #af3428;
   border-color: #af3428;
   box-shadow: none;
+  outline: none;
   position: relative;
   top: 2px;
   color: #e6e6e6;
@@ -6616,6 +6624,7 @@ button.close {
 .page-header > .container .page-details {
   display: block;
   clear: both;
+  margin-bottom: 0;
   color: #949494;
 }
 .page-header > .container .page-details a:link,
